# playground

./: .gitignore  README.md  pyproject.toml  solve_make10.py
.devcontainer/: devcontainer.json
nabeatsu/: nabeatsu.py  plot_nabeatsu.ipynb
solve_make10/: solve_make10.py
