[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Laplusdestiny <prayonshootingstars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
tqdm = "*"
plotly = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
